--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,17 @@
-// TODO
+.container {
+  height: 2rem;
+}
+
+.headerContent {
+  max-width: 700px;
+  height: 6rem;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+
+  img {
+    width: 238.62px;
+    height: 25.63px;
+  }
+}
