--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,60 @@
-// TODO
+.posts {
+  max-width: 720px;
+  margin: 4rem auto 0;
+
+  a {
+    display: block;
+
+    strong {
+      font-size: 1.75rem;
+      font-weight: 700;
+      line-height: 33,89px;
+      text-align: justify;
+      color: var(--heading);
+    }
+
+    p {
+      font-size: 1,125rem;
+      color: var(--body);
+      line-height: 22px;
+      margin-top: 0.5rem;
+    }
+
+    ul {
+      display: flex;
+      align-items: center;
+      list-style: none;
+      margin-top: 0.5rem;
+
+      li {
+        margin-right: 1rem;
+        svg {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+
+    & + a {
+      padding-top: 2rem;
+    }
+
+    &:last-child {
+      margin-bottom: 2rem;
+    }
+  }
+
+}
+
+.buttonMorePost {
+    border: none;
+    background: transparent;
+    color: var(--highlight);
+    font-weight: 600;
+    font-size: 1.125rem;
+
+    transition: filter 0.2s;
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+}
