--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -3,3 +3,25 @@
   margin: 4rem auto;
   // padding: 0 2rem;
 }
+
+.preview {
+  width: 100%;
+  padding: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--heading);
+  color: var(--background);
+  font-weight: bold;
+  font-size: 1.125rem;
+  border: none;
+  border-radius: 5px;
+
+  transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.8);
+  }
+}
